--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -15,6 +15,7 @@ h2 {
   font-weight: 700;
   font-size: 80px;
   line-height: 92px;
+  margin: 0;
 }
 
 h3 {
@@ -23,11 +24,13 @@ font-family: 'Barlow', sans-serif;
   font-size: 42px;
   line-height: 52px;
   letter-spacing: 1px;
+  margin: 2em 0 0;
 }
 h4 {
    font-family: 'Barlow', sans-serif;
   font-weight: 700;
   font-size: 32px;
-  line-height: 40;
+  line-height: 30px;
+  margin: 0;
 }
 
