added contacts page

--- a/styles/sass/partials/_basestyles.scss
+++ b/styles/sass/partials/_basestyles.scss
@@ -1,6 +1,7 @@
 body {
     max-width: 1500px;
     margin: 0 auto;
+    background-color: #0c1423;
 }
 .wrapper{
     max-width: 1260px;
@@ -22,6 +23,7 @@ button {
 }
 a {
   text-decoration: none; 
+  color: white;
 }
 
 nav {
