--- a/styles/sass/partials/_main.scss
+++ b/styles/sass/partials/_main.scss
@@ -41,28 +41,48 @@ main {
 }
 .links-section {
     display: flex;
-    flex-basis: 50%;
     flex-wrap: wrap;
     padding-bottom: 4em;
     .links {
-        margin: 4em 0 0;
         width: 50%;
+        margin: 4em 0 0;
+        justify-content: space-between;
        p {
-        width: 90%;}
+           width: 90%;
+       }
     }
     a {
         color: white;
     }
 }
+.fa-location-arrow {
+    display: inline-block;
+}
+.links-header {
+    display: flex;
+    margin-right: 1em;
+}
+.icon-circle {
+    background-color: $blue; 
+    height: 52px;
+    width: 52px;
+    border-radius: 50%;
+}
+i{
+    align-items: center;
+    justify-content: center;
+}
+.fa-sticky-note {
+font-size: 0.7;
+margin-left: .2em;
+}
 .gallery {
     background-color: $green;
     padding: 2em 0 4em;
-
     .img-gallery {
         display: flex;
         img {
             width: 90%;
         }
-
     }
 }
