--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -8,6 +8,7 @@ p {
     font-family: 'Lato', sans-serif;
     font-size: 20px;
     line-height: 32px;
+    color: white;
 }
 
 h2 {
@@ -16,6 +17,7 @@ h2 {
   font-size: 80px;
   line-height: 92px;
   margin: 0;
+  color: white;
 }
 
 h3 {
