--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,3 @@
-html {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
-}
-
 body {
   padding: 0;
   margin: 0;
@@ -30,6 +20,7 @@ body {
 body {
   max-width: 1500px;
   margin: 0 auto;
+  background-color: #0c1423;
 }
 
 .wrapper {
@@ -55,6 +46,7 @@ button {
 
 a {
   text-decoration: none;
+  color: white;
 }
 
 nav {
@@ -85,6 +77,7 @@ p {
   font-family: 'Lato', sans-serif;
   font-size: 20px;
   line-height: 32px;
+  color: white;
 }
 
 h2 {
@@ -93,6 +86,7 @@ h2 {
   font-size: 80px;
   line-height: 92px;
   margin: 0;
+  color: white;
 }
 
 h3 {
@@ -215,16 +209,17 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding-bottom: 4em;
 }
 
 .links-section .links {
-  margin: 4em 0 0;
   width: 50%;
+  margin: 4em 0 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .links-section .links p {
@@ -233,6 +228,38 @@ main {
 
 .links-section a {
   color: white;
+}
+
+.fa-location-arrow {
+  display: inline-block;
+}
+
+.links-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 1em;
+}
+
+.icon-circle {
+  background-color: #86E0F9;
+  height: 52px;
+  width: 52px;
+  border-radius: 50%;
+}
+
+i {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.fa-sticky-note {
+  font-size: 0.7;
+  margin-left: .2em;
 }
 
 .gallery {
@@ -247,5 +274,99 @@ main {
 }
 
 .gallery .img-gallery img {
+  width: 90%;
+}
+
+.contact-header {
+  background-image: url(../../../assets/contact-header.jpg);
+  position: relative;
+  height: 50vh;
+}
+
+.get-in-touch {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 5em;
+}
+
+.get-in-touch .info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.get-in-touch h4 {
+  color: white;
+  margin: 1em 0;
+}
+
+.get-in-touch p {
+  margin: 0;
+}
+
+.get-in-touch i {
+  font-size: 1.4em;
+  margin: 1em .5em 1em 0;
+}
+
+.get-in-touch .contact-form {
+  width: 100%;
+}
+
+.get-in-touch .contact-us {
+  max-width: 1500px;
+  background-color: #0f614E;
+}
+
+.get-in-touch .contact-us .email-name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 90%;
+  border: none;
+  gap: 1em;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.get-in-touch .contact-us #name, .get-in-touch .contact-us #email {
+  width: 100%;
+  line-height: 3em;
+  border-bottom: 3px solid #86E0F9;
+  margin: 3em auto;
+}
+
+.get-in-touch .contact-us input,
+.get-in-touch .contact-us textarea {
+  padding: 0 0 10px 5px;
+  border: none;
+  background-color: #0f614E;
+  border: none;
+  color: white;
+}
+
+.get-in-touch .contact-us textarea {
+  padding: 3em;
+  width: 80%;
+  height: 400px;
+  margin: 0 auto;
+  color: white;
+  border: 2px solid #86E0F9;
+}
+
+.get-in-touch .contact-us button {
   width: 90%;
 }
