added style changes

--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -2,11 +2,13 @@
     background-image: url(../assets/contact-header.jpg);
     position: relative;
     height: 60vh;
-    h2 {
-        margin-left: 6.6em;
-        margin-top: em;
-    }
 }
+ h2 {
+    
+        margin-top: 1em;
+        margin-left: 6.5em;
+     }
+
 .contact-us{
     display: flex;
     flex-direction: row;
@@ -33,7 +35,8 @@
     width: 100%;
     position: relative;
     background-color: $green;
-    
+    bottom: 18em;
+    right: -15em;
     .positioning{
     top: -250px;
     right: -240px;
