--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -3,28 +3,39 @@
     position: relative;
     height: 60vh;
 }
-
+.blog-position {
+    display: flex;
+    h2 {
+        display: flex;
+        flex-basis: 60%;
+        align-content: center;
+        justify-content: flex-end;
+        margin-top: 2em;
+    }
+}
 .two-col{
     display: flex;
     justify-content: space-between;
-    // gap: 2em;
-    .left-img {
-        margin-top: 2em;
-        width: 110%;
+    .blog-left-img {
+        margin-top: 3em;
         position: relative;
-        left: -2em;
-        vertical-align: top;
-        
+        left: -7.5em;
+        top: .3em;
     }
+    .blog-right-shadow{
+         box-shadow: 26px 0px $green;
+        }
+    
     .col-left {
         flex-basis: 35%;
         .blog-text{
-           padding-left: 1em ;
+           padding: 3em 0 0 1em ;
              background-color: $green;
+             width: 75%;
         }
+        
         h4 {
             color: white;
-            padding-top: .5em;
              background-color: $green;
         }
         ul {
@@ -37,19 +48,39 @@
             padding: 0;
             list-style:disc;
         }
+
         
     }
     .col-right {
         flex-basis: 60%;
-        .right-img {
+        .blog-img-right {
             position: relative;
-            right: -4.2em;
-            top: -11em; 
+            right: -1.4em;
+            top: -18em; 
+        }
+        .blog-left-shadow {
+              box-shadow: -27px 27px $blue;;
+              width: 113%;
+        }
+        .blog-post{
+            margin-top: -17em;
+            p {
+                margin-left: 1.4em;
+            }
+            p:nth-last-of-type(1) {
+                padding-bottom: 3em;
+                line-height: 1.5em;
+            }
+        }
+        .post-right-shadow {
+            box-shadow: -5px 5px $blue;
         }
         h3 {
             color: white;
-            margin-top: -3em;
+            margin: -3em 0 0 .6em;
+            padding-top: 1em;
         }
+        
         .comments {
             display: grid;
             grid-template-columns: 1fr 3fr;
@@ -71,5 +102,10 @@
          width: 100%;
         gap: 2em;
          }
+    }
+}
+.leave-comment {
+    textarea {
+        width: 100%;
     }
 }
