--- a/styles/styles.css
+++ b/styles/styles.css
@@ -243,27 +243,38 @@ main {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   padding-bottom: 4em;
 }
 
 .links-section .links {
-  width: 50%;
+  width: 40%;
   margin: 4em 0 0;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+}
+
+.links-section .links h3 {
+  color: white;
+  margin-top: 0;
 }
 
 .links-section .links p {
   width: 90%;
+  margin-left: 3em;
 }
 
 .links-section a {
   color: white;
 }
 
-.fa-location-arrow {
-  display: inline-block;
+.links-section .links-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .links-header {
@@ -278,6 +289,7 @@ main {
   height: 52px;
   width: 52px;
   border-radius: 50%;
+  margin-right: 1em;
 }
 
 i {
@@ -287,11 +299,13 @@ i {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  color: white;
+  margin: .2em 0 0 .1em;
+  font-size: 37px;
 }
 
 .fa-sticky-note {
-  font-size: 0.7;
-  margin-left: .2em;
+  margin-left: .3em;
 }
 
 .gallery {
@@ -373,7 +387,7 @@ h2 {
   width: 100%;
   position: relative;
   background-color: #0f614E;
-  bottom: 18em;
+  bottom: 11em;
   right: -15em;
 }
 
