--- a/styles/sass/partials/_basestyles.scss
+++ b/styles/sass/partials/_basestyles.scss
@@ -9,7 +9,8 @@ body {
     margin: 0 auto;
 }
 img {
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 button {
  font-family: 'Barlow', sans-serif;
