--- a/styles/sass/partials/_mediaqueries.scss
+++ b/styles/sass/partials/_mediaqueries.scss
@@ -1,4 +1,4 @@
-@media(max-width: 1300px){
+@media(max-width: 1330px){
     .more-blog{
     .small-fish {
         width: 100%;
@@ -16,8 +16,10 @@
          bottom: -5em;
     } 
     }
+    .links {
+        padding-top: 2em;
+    }
 }
-
 @media(max-width: 1160px) {
     .blog-section, 
     .top, 
@@ -82,13 +84,6 @@ header {
     background-image: url(../assets/header-image.jpg);
     position: relative;
     background-repeat: no-repeat;
-    img {
-        position: absolute;
-        top: 20em;
-        right: 0;
-        width: 60%;
-        height: 50%;
-    }
     h1 {
     width: 120%;
     margin-top: .5em;
@@ -103,5 +98,16 @@ header {
    .this-months-text {
          width: 110%;
    }
+}
+}
+@media (max-width: 1000px){
+     header {
+   
+    h1 {
+    width: 110%;
+    margin-top: .5em;
+    padding-bottom: 3em;
+    font-size: 100px;
+    }
 }
 }
